force-app/main/default/objects/Staff_Assignment__c/Staff_Assignment__c.object-meta.xml
<CustomObject>
    <label>Staff Assignment</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Staff Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>