force-app/main/default/objects/Staff_Assignment__c/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <label>Assignment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>