force-app/main/default/objects/Staff_Assignment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Staff Assignments</relationshipLabel>
    <relationshipName>Staff_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>