force-app/main/default/objects/Staff_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Coordinator</fullName>
            </value>
            <value>
                <fullName>On-Site Manager</fullName>
            </value>
            <value>
                <fullName>Logistics Lead</fullName>
            </value>
            <value>
                <fullName>Client Liaison</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>