force-app/main/default/objects/Staff_Assignment__c/fields/Staff_User__c.field-meta.xml
<CustomField>
    <fullName>Staff_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>